hphp/hack/test/typecheck/not_an_array.php.like_types.exp
File "not_an_array.php", line 6, characters 15-16:
Invalid argument (Typing[4110])
File "not_an_array.php", line 3, characters 22-26:
Expected array
File "not_an_array.php", line 5, characters 14-30:
But got dynamic because it is an unenforceable type
